# CEREBRUM

./: .coveragerc  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PROGRESS_REPORT.md  README.md  README_TESTING.md  appendix_content.tex  combined_content.tex  coverage.json  main_content.tex  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.desloppify/: query.json  review_batch_1.json  review_batch_2.json  review_batch_3.json  review_batch_4.json  review_packet_blind.json  state-python.json  state-python.json.bak
CEREBRUM/: CATEGORY_THEORY_APPENDIX.md  CEREBRUM.md  CEREBRUM.md.bak  CEREBRUM_main_text.md  FUTURE_DIRECTIONS_APPENDIX.md  Figure_1.md  Figure_10.md  Figure_11.md  Figure_12.md  Figure_13.md  Figure_14.md  Figure_15.md  Figure_2.md  Figure_3.md  Figure_4.md  Figure_5.md  Figure_6.md  Figure_7.md  Figure_8.md  Figure_9.md  MATH_APPENDIX.md  NOVEL_CASES_APPENDIX.md  PRACTICAL_APPENDIX.md  Supplement_0_Figures.md  Supplement_1_Mathematical_Formalization.md  Supplement_2_Novel_Linguistic_Cases.md  Supplement_3_Practical_Applications.md  Supplement_4_Related_Work.md  Supplement_5_Category_Theory.md  Supplement_6_Future_Directions.md  Supplement_A_1_Mathematical_Formalization.md  Supplement_B_2_Novel_Linguistic_Cases.md  Supplement_D_4_Related_Work.md  Supplement_F_6_Future_Directions.md  appendix_marker.tex  end_appendices.tex  start_appendices.tex  title_page.md
backup_supplements/: Supplement_A_1_Mathematical_Formalization.md  Supplement_C_3_Practical_Applications.md  Supplement_E_5_Category_Theory.md
beyond_cerebrum/: AGENTS.md  README.md  beyond_spec.md
docs/: AGENTS.md  InferAnt_Stream_012.1.md  InferAnt_Stream_012.2.md  README.md  active_inference_integration.md  cerebrum_core_spec.md  contributing_documentation.md  contributing_research.md  contributing_technical.md  getting_started.md  how_it_works.md  implementation_roadmap.md  language_implementations.md  language_nuance_handling.md  model_examples.md  whos_on_first_cerebrum_actinf_llm.md
languages/: finnish-figures.md
paper/: AGENTS.md  README.md  assemble_paper.py
scripts/: AGENTS.md  README.md  fix_markdown.py  render_diagrams.py  render_pdf.py  setup_cerebrum.py
speculative_design/: finnish_concepts_techno_ecological_systems.md  hungarian_cases_fep_partition.md
src/: AGENTS.md  (+3 more)
(+3001 files in other folders)
