[project]
name = "cerebrum"
version = "1.4.0"
description = "CEREBRUM: Case-Enabled Reasoning Engine with Bayesian Representations for Unified Modeling"
readme = "README.md"
license = {text = "CC BY-NC-ND 4.0"}
authors = [
    {name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"}
]
requires-python = ">=3.9"
keywords = ["active-inference", "cognitive-modeling", "bayesian", "case-based-reasoning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-html>=3.2.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.70.0",
    "black>=23.1.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "scikit-learn>=1.3.0",
]
lexicon = [
    "spacy>=3.5.0",
    "plotly>=5.14.0",
    "imageio>=2.28.0",
    "psutil>=5.9.0",
]
llm = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]
all = [
    "cerebrum[dev,lexicon,llm]",
]

[project.urls]
Homepage = "https://github.com/ActiveInferenceInstitute/CEREBRUM"
Documentation = "https://github.com/ActiveInferenceInstitute/CEREBRUM/tree/main/docs"
Repository = "https://github.com/ActiveInferenceInstitute/CEREBRUM.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
